llama-stack/openshift/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: llamastack
spec:
  ports:
    - protocol: TCP
      port: 8321
      targetPort: 8321
  type: ClusterIP
  selector:
    app: llamastack
