llama-stack/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llamastack
spec:
  to:
    kind: Service
    name: llamastack
    weight: 100
  port:
    targetPort: 8321
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
